# github_slack_notification_daemon

./: .gitignore  Cargo.toml  README.md
notification_daemon/: Cargo.toml
notification_daemon/src/: main.rs
src/: github_client.rs  github_notification.rs  lib.rs  main.rs  slack_client.rs  slack_message.rs
