[package]
name = "github_notifications"
version = "0.1.0"
authors = ["rhys <rhysormond@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.0-alpha.2", features = ["json", "blocking"] }
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
chrono = "0.4.10"
