[package]
name = "github_notifications"
version = "0.1.0"
authors = ["rhys <rhysormond@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.0-alpha.2", features = ["json"] }
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
chrono = "0.4.10"
futures = "0.3.1"
log = "0.4.8"

[workspace]
# The executable that uses this library is a member of this workspace so that it
# can have dependencies github_notifications shouldn't have
members = ["notification_daemon"]
